RESOLVED FIXED68140
DFG JIT does not leverage integer speculations on branches
https://bugs.webkit.org/show_bug.cgi?id=68140
Summary DFG JIT does not leverage integer speculations on branches
Filip Pizlo
Reported 2011-09-14 21:17:42 PDT
DFG JIT specializes branches for booleans. But it does not specialize them for integers.
Attachments
the patch (4.67 KB, patch)
2011-09-14 21:36 PDT, Filip Pizlo
oliver: review+
webkit-ews: commit-queue-
the patch (4.22 KB, patch)
2011-09-14 22:10 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2011-09-14 21:36:05 PDT
Created attachment 107452 [details] the patch
Oliver Hunt
Comment 2 2011-09-14 21:50:09 PDT
Comment on attachment 107452 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=107452&action=review r+ if you remove the platform.h change > Source/JavaScriptCore/wtf/Platform.h:960 > -#define ENABLE_TIERED_COMPILATION 0 > +#define ENABLE_TIERED_COMPILATION 1 You really want to commit this don't you?
Early Warning System Bot
Comment 3 2011-09-14 21:52:34 PDT
Filip Pizlo
Comment 4 2011-09-14 22:10:26 PDT
(In reply to comment #2) > (From update of attachment 107452 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=107452&action=review > > r+ if you remove the platform.h change > > > Source/JavaScriptCore/wtf/Platform.h:960 > > -#define ENABLE_TIERED_COMPILATION 0 > > +#define ENABLE_TIERED_COMPILATION 1 > > You really want to commit this don't you? Yes I really do! :-)
Filip Pizlo
Comment 5 2011-09-14 22:10:55 PDT
Created attachment 107456 [details] the patch
Filip Pizlo
Comment 6 2011-09-15 00:27:36 PDT
Landed in r95170.
Geoffrey Garen
Comment 7 2011-09-15 11:19:49 PDT
Comment on attachment 107456 [details] the patch Clearing r? since this was committed.
Note You need to log in before you can comment on or make changes to this bug.