DFG JIT does not leverage integer speculations on branches https://bugs.webkit.org/show_bug.cgi?id=68140

Reviewed by Oliver Hunt.

* dfg/DFGJITCodeGenerator.cpp:
(JSC::DFG::JITCodeGenerator::isStrictInt32):
* dfg/DFGJITCodeGenerator.h:
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/84052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95170 268f45cc-cd09-0410-ab3c-d52691b4dbfc