Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp
@@ -1278,6 +1278,51 @@ void SpeculativeJIT::compile(Node& node)
     }
 
     case Branch:
+        if (isStrictInt32(node.child1())) {
+            SpeculateStrictInt32Operand op(this, node.child1());
+            
+            BlockIndex taken = m_jit.graph().blockIndexForBytecodeOffset(node.takenBytecodeOffset());
+            BlockIndex notTaken = m_jit.graph().blockIndexForBytecodeOffset(node.notTakenBytecodeOffset());
+            
+            MacroAssembler::ResultCondition condition = MacroAssembler::NonZero;
+            
+            if (taken == (m_block + 1)) {
+                condition = MacroAssembler::Zero;
+                BlockIndex tmp = taken;
+                taken = notTaken;
+                notTaken = tmp;
+            }
+            
+            addBranch(m_jit.branchTest32(condition, op.gpr()), taken);
+            if (notTaken != (m_block + 1))
+                addBranch(m_jit.jump(), notTaken);
+            
+            noResult(m_compileIndex);
+            break;
+        }
+        if (shouldSpeculateInteger(node.child1())) {
+            SpeculateIntegerOperand op(this, node.child1());
+
+            BlockIndex taken = m_jit.graph().blockIndexForBytecodeOffset(node.takenBytecodeOffset());
+            BlockIndex notTaken = m_jit.graph().blockIndexForBytecodeOffset(node.notTakenBytecodeOffset());
+            
+            MacroAssembler::RelationalCondition condition = MacroAssembler::NotEqual;
+
+            if (taken == (m_block + 1)) {
+                condition = MacroAssembler::Equal;
+                BlockIndex tmp = taken;
+                taken = notTaken;
+                notTaken = tmp;
+            }
+            
+            addBranch(m_jit.branchPtr(condition, op.gpr(), GPRInfo::tagTypeNumberRegister), taken);
+
+            if (notTaken != (m_block + 1))
+                addBranch(m_jit.jump(), notTaken);
+            
+            noResult(m_compileIndex);
+            break;
+        }
         emitBranch(node);
         break;
 
